add more content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             src="https://youtu.be/bZOT3idlQuA" class="video-size"></video>
         </li>
         <li>
-          <p>This is a video survey aims at support and improve the employment of people with hearing impairment</p>
+          <p>This is a video survey aims at support and improve the employment of people with hearing impairment.</p>
         </li>
         <li>
           <button class="btn-start-survey"> Start The Survey</button>
