--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- welcome page ________________________ -->
 <section class="center-welcome">
   <header>
-      <h1 style="font: 44px futuraCondensedMedium">Ontario Deaf Adult Survey</h1>
+      <h1 style="font: 44px futuraCondensedMedium">Ontario Survey of Deaf Adult Employment</h1>
     </header>
 
     <main>
@@ -29,7 +29,7 @@
             src="https://youtu.be/bZOT3idlQuA" class="video-size"></video>
         </li>
         <li>
-          <p>This is a video survey aims at support and improve the employment of people with hearing impairment.</p>
+          <p>This is a video survey is going to collect and analyse the data and information that related to the employment of deaf adult in Ontario. The final goal is to reduce barriers for people with hearing impairment and support them succeed in job employment.</p>
         </li>
         <li>
           <button class="btn-start-survey"> Start The Survey</button>
@@ -40,14 +40,20 @@
 
 
   <!-- survey content_______________________________ -->
-  <header class="title hide-item">
+  <section>
+    <nav>
+      <span id="top-review" class="nav-style">Review</span>
+      <pan id="top-home" class="nav-style" onclick="homePage()">Home</pan>
+    </nav>
+    <h1>Ontario </h1>
+  </section>
+
+  <section class="title hide-item">
       <div class="middle">
           <span id="header-icon"></span>
           <span><h3 id="title-name"></h3></span>
       </div>
-      <img src="img\icons\review-icon-blue.svg" width="55px" alt="" id="top-review" onmouseover="mouseOver()"  onmouseout="mouseOut()">
-      <img src="img\icons\home-btn.svg" alt="" width="60px"id="top-home" onclick="homePage()">
-  </header>
+  </section>
 <!-- web side nav bar____________________________ -->
   <section class="all-content hide-from-welcome">
    <nav>
