--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <!-- welcome page ________________________ -->
 <section class="center-welcome">
   <header>
-      <h1 style="font: 44px futuraCondensedMedium">Ontario Survey of Deaf Adult Employment</h1>
+      <h1 style="font: 40px futuraCondensedMedium">Welcome to 
+      Ontario Survey of Deaf Adult Employment</h1>
     </header>
 
     <main>
@@ -40,15 +41,12 @@
 
 
   <!-- survey content_______________________________ -->
-  <section>
-    <nav>
-      <span id="top-review" class="nav-style">Review</span>
-      <pan id="top-home" class="nav-style" onclick="homePage()">Home</pan>
-    </nav>
-    <h1>Ontario </h1>
-  </section>
 
   <section class="title hide-item">
+       <div>
+        <a id="top-home" class="nav-style" onclick="homePage()">Home</a>
+        <a id="top-review" class="nav-style">Review</a>
+       </div>
       <div class="middle">
           <span id="header-icon"></span>
           <span><h3 id="title-name"></h3></span>
@@ -381,8 +379,8 @@
               </ul> -->
       </div>
       <div class="submit-review">
-          <input type="submit" name="submit" value="submit" id="review-submit">
       </div>
+      <input type="submit" name="submit" value="Submit" id="review-submit">
    </form>
   </main>
   </section>
